--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,6 +1,6 @@
-name: Automaticcraftingtable
+name: AutomaticCraftingTable
 version: '${project.version}'
 main: de.philw.automaticcraftingtable.AutomaticCraftingTable
 api-version: 1.19
 authors: [ Phil ]
-description: This plugin allows you to use a crafting table in a hopper system to automatically craft items. Use shift and right click on the crafting table to configure the settings.
+description: This plugin allows you to use a crafting table in a hopper system to automatically craft items. Use shift and left click on the crafting table to configure the settings.
