--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <name>Automaticcraftingtable</name>
 
     <description>This plugin allows you to use a crafting table in a hopper system to automatically craft items. Use
-        shift and right click on the crafting table to configure the settings.
+        shift and left-click on the crafting table to configure the settings.
     </description>
     <properties>
         <java.version>1.8</java.version>
