--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,4 +3,5 @@ version: '${project.version}'
 main: de.philw.automaticcraftingtable.AutomaticCraftingTable
 api-version: 1.19
 authors: [ Phil ]
-description: This plugin allows you to use a crafting table in a hopper system to automatically craft items. Use shift and left click on the crafting table to configure the settings.
+description: This plugin allows you to use a crafting table in a hopper system to automatically craft
+  items. Use shift and left click on the crafting table to configure the settings.
