--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,6 +1,8 @@
 # The config file supports color codes. For example gold is &6
+# More specific information about the config file here: https://modrinth.com/plugin/automatic-crafting-table
 
 enabled: true
 crafting-table-ui-display: 'Automatic Crafting Table Recipe'
 crafting-table-ui-space-display: 'space'
-crafting-table-timer: 4 # In ticks. 20 ticks = 1 second
+crafting-table-timer: 4
+crafting-table-ui-need-permission: false
