--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>de.philw</groupId>
     <artifactId>automaticcraftingtable</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.3.2</version>
     <packaging>jar</packaging>
 
     <name>Automaticcraftingtable</name>
