--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>de.philw</groupId>
     <artifactId>automaticcraftingtable</artifactId>
-    <version>1.4.1</version>
+    <version>1.4.2</version>
     <packaging>jar</packaging>
 
     <name>Automaticcraftingtable</name>
@@ -17,9 +17,12 @@
     <properties>
         <java.version>1.8</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.build.directory>C:\Users\philw\Desktop\Alles\Minecraft Server\AutomaticCraftingTable\plugins\
+        </project.build.directory>
     </properties>
 
     <build>
+        <directory>${project.build.directory}</directory>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
